--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -77,8 +77,8 @@ admin_33 : "<blockquote><b>Aliran Berhasil Dicari hingga {0} Menit</b></blockquo
 admin_34 : "<blockquote><b>Gagal mencari aliran saat ini.</b></blockquote>"
 
 # Start
-start_1 : "<blockquote><b>Halo, saya {0}.\n\nbot streaming telegram dengan beberapa fitur berguna. untuk memudahkan kamu memutar music di obrolan suara\n\nJangan ragu untuk menambahkan saya kegroup kamu.</b></blockquote>"
-start_2 : "<blockquote><b>Terima kasih telah menerima saya di {0}.\n{1} Saya Masih Berfungsi.\n\nUntuk bantuan atau bantuan apa pun, periksa Group dan Channel Support kami.</b></blockquote>"
+start_1 : "<blockquote><b>Halo, saya {0}.\n\nbot streaming telegram dengan beberapa fitur berguna. untuk memudahkan anda mendengarkan music gratis tanpa iklan di obrolan suara\n\nJangan ragu untuk menambahkan saya kegroup anda.</b></blockquote>"
+start_2 : "<blockquote><b>Hai... Terima kasih telah menerima aku 🥰 {0}.\n{1} Aku Masih Berfungsi loh.\n\nUntuk bantuan atau kendala, silahkan hubungi owner aku di Group dan Channel Support yaww☺️.</b></blockquote>"
 start_3 : "<blockquote><b>Pemilik {0} {1} baru saja bergabung dengan obrolan kamu.</b></blockquote>"
 start_4 : "<blockquote><b>Anggota Pengguna Sudo {0}[{1}] baru saja bergabung dengan obrolan kamu.</b></blockquote>"
 start_5 : "<blockquote><b>🦸 **Butuh Super Group**\n\nᴘʟᴇᴀsᴇ ᴄᴏɴᴠᴇʀᴛ ʏᴏᴜʀ **ɢʀᴏᴜᴘ** ᴛᴏ **sᴜᴘᴇʀɢʀᴏᴜᴘ** ᴀɴᴅ ᴛʜᴇɴ ᴀᴅᴅ ᴍᴇ ʙᴀᴄᴋ.\n\n**ʜᴏᴡ ᴛᴏ ᴍᴀᴋᴇ sᴜᴘᴇʀɢʀᴏᴜᴘ ?**\n🥱 ᴍᴀᴋᴇ ʏᴏᴜʀ ɢʀᴏᴜᴘ's ᴄʜᴀᴛ ʜɪsᴛᴏʀʏ **ᴠɪsɪʙʟᴇ** ᴏɴᴄᴇ.</b></blockquote>"
